@@ -1,3 +1,15 @@
+Fri May  2 12:01:45 2003  Chad Elliott  <elliott_c@ociweb.com>
+
+        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
+
+          Check to make sure that the server is running before removing it.
+          If it is running, reset the running information.
+
+        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
+
+          Get the server information after reregistering the server before
+          displaying it.
+
 Fri May 02 17:03:49 2003  Simon McQueen  <sm@prismtechnologies.com>
 
         * orbsvcs/orbsvcs/CosNotification_Static.dsp:
